--- a/tests/integration/targets/test_deploy_flask_app/vars/main.yaml
+++ b/tests/integration/targets/test_deploy_flask_app/vars/main.yaml
@@ -1,5 +1,6 @@
 ---
-aws_region: us-east-1
+# vars for create and delete
+# ==================================
 resource_prefix: "ansible-demo-test"
 vpc_name: "{{ resource_prefix }}-vpc"
 vpc_cidr: 10.1.0.0/16
@@ -16,13 +17,24 @@ rds_secgroup_name: "{{ resource_prefix }}-rds-sec"
 rds_identifier: "{{ resource_prefix }}-rds-01"
 sshkey_pair_name: "{{ resource_prefix }}-key"
 
-# ids for add_host
-private_subnet_id: "subnet-0b174890d6e380456"
-vpc_id: "vpc-061f758b1e21a200b"
+rds_listening_port: 5432
+rds_allocated_storage_gb: 20
+rds_instance_class: db.m6g.large
+rds_instance_name: mysampledb123
+rds_engine: postgres
+rds_engine_version: "14.8"
 
+bastion_host_type: t2.xlarge
+bastion_host_venv_path: ~/env
+
+workers_user_name: fedora
+image_filter: Fedora-Cloud-Base-35-*
+
+# vars for the deploy_flask_app role and create task
+# =================================================
+region: "us-east-1"
 bastion_host_name: "{{ resource_prefix }}-bastion"
 bastion_host_username: fedora
-bastion_host_type: t2.xlarge
 bastion_host_required_packages:
   - python3
   - python-virtualenv
@@ -31,10 +43,8 @@ bastion_host_required_packages:
   - podman
   - httpd-tools
   - ansible
-bastion_host_venv_path: ~/env
 
 workers_instance_type: t2.large
-workers_user_name: fedora
 number_of_workers: 2
 
 app_listening_port: 5000
@@ -45,19 +55,9 @@ app_config:
   admin_password: admin
   app_dir: /app/pyapp
 app_force_init: false
-rds_listening_port: 5432
 local_registry_user: ansible
 local_registry_pwd: testing123
 local_registry_port: "{{ app_listening_port }}"
 
-rds_allocated_storage_gb: 20
-rds_instance_class: db.m6g.large
-rds_instance_name: mysampledb123
-rds_engine: postgres
-rds_engine_version: "14.8"
 rds_master_password: L#5cH2mgy_
 rds_master_user: ansible
-
-image_filter: Fedora-Cloud-Base-35-*
-
-operation: create
