--- a/roles/deploy_flask_app/tasks/deploy_app.yaml
+++ b/roles/deploy_flask_app/tasks/deploy_app.yaml
@@ -1,6 +1,5 @@
 ---
 - name: Create Cloud Resources (workers, load balancer, etc)
-  # delegate_to: localhost
   module_defaults:
     group/aws:
       aws_access_key: "{{ aws_access_key | default(omit) }}"
@@ -8,10 +7,12 @@
       security_token: "{{ security_token | default(omit) }}"
       region: "{{ region | default(aws_region) }}"
 
-  vars:
-    deploy_flask_app_localhost_key_pair: "{{ deploy_flask_app_setup.add_host.host_vars.ansible_host_name }}-key"
-    deploy_flask_app_instance_name: "{{ deploy_flask_app_setup.add_host.host_vars.ansible_host_name }}-workers"
   block:
+    - name: Set variables
+      ansible.builtin.set_fact:
+        deploy_flask_app_localhost_key_pair: "{{ deploy_flask_app_setup.add_host.host_vars.ansible_host_name }}-key"
+        deploy_flask_app_instance_name: "{{ deploy_flask_app_setup.add_host.host_vars.ansible_host_name }}-workers"
+
     - name: Create key pair to connect to the VM
       amazon.aws.ec2_key:
         name: "{{ deploy_flask_app_localhost_key_pair }}"
@@ -63,14 +64,17 @@
         deploy_flask_app_instances_list: "{{ deploy_flask_app_instances_list + [item.instance_id + ':' + item.private_ip_address] }}"
       with_items: "{{ deploy_flask_app_vms.instances }}"
 
+
+- name: Set variables
+  ansible.builtin.set_fact:
+    deploy_flask_app_workers_instances: "{{ deploy_flask_app_vms.instances }}"
+    deploy_flask_app_workers_join: "{{ deploy_flask_app_instances_list | join(',') }}"
+
 - name: Create inventory file
   ansible.builtin.template:
     src: inventory.j2
     dest: ~/inventory.ini
     mode: 0644
-  vars:
-    deploy_flask_app_workers_instances: "{{ deploy_flask_app_vms.instances }}"
-    deploy_flask_app_workers_join: "{{ deploy_flask_app_instances_list | join(',') }}"
   delegate_to: bastion
 
 - name: Create vars file
