--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -30,7 +30,7 @@ bastion_host_required_packages:
   - ansible
 bastion_host_venv_path: ~/env
 
-workers_instance_type: t2.large
+workers_instance_type: t3.micro
 workers_user_name: fedora
 number_of_workers: 2
 
@@ -53,7 +53,7 @@ rds_instance_name: mysampledb123
 rds_engine: postgres
 rds_engine_version: "14.8"
 rds_master_password: L#5cH2mgy_
-rds_master_user: ansible
+rds_master_username: ansible
 
 image_filter: Fedora-Cloud-Base-35-*
 
