Rename playbook and role vars

--- a/playbooks/webapp/migrate_webapp.yaml
+++ b/playbooks/webapp/migrate_webapp.yaml
@@ -86,4 +86,8 @@
       ansible.builtin.import_role:
         name: cloud.aws_ops.deploy_flask_app
       vars:
-        region: "{{ dest_region }}"
+        deploy_flask_app_private_subnet_id: "{{ private_subnet.subnet.id }}"
+        deploy_flask_app_vpc_id: "{{ vpc.vpc.id }}"
+        deploy_flask_app_vm_info: "{{ vm_result }}"
+        deploy_flask_app_rds_info: "{{ rds_result }}"
+        deploy_flask_app_region: "{{ dest_region }}"
