--- a/changelogs/fragments/add_deploy_flask_app_role.yaml
+++ b/changelogs/fragments/add_deploy_flask_app_role.yaml
@@ -1,5 +1,5 @@
 ---
 breaking_changes:
-- "Rename webapp playbook variable rds_master_user to rds_master_username (https://github.com/redhat-cop/cloud.aws_ops/pull/85)."
+- "Rename the vars in webapp playbook with role name prefix (https://github.com/redhat-cop/cloud.aws_ops/pull/85)."
 minor_changes:
 - "Convert deploy_flask_app playbook to role (https://github.com/redhat-cop/cloud.aws_ops/pull/85)."
