--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -1,4 +1,5 @@
 ---
+# Variables for create.yaml
 aws_region: us-east-1
 resource_prefix: "ansible-demo-test"
 vpc_name: "{{ resource_prefix }}-vpc"
@@ -9,18 +10,27 @@ subnet_cidr:
   - 10.1.2.0/24
 resource_tags:
   prefix: "{{ resource_prefix }}"
+operation: create
 
-rds_subnet_group_name: "{{ resource_prefix }}-rds-sg"
+image_filter: Fedora-Cloud-Base-35-*
 public_secgroup_name: "{{ resource_prefix }}-sg"
+rds_subnet_group_name: "{{ resource_prefix }}-rds-sg"
 rds_secgroup_name: "{{ resource_prefix }}-rds-sec"
 rds_identifier: "{{ resource_prefix }}-rds-01"
-sshkey_pair_name: "{{ resource_prefix }}-key"
-
-
-bastion_host_name: "{{ resource_prefix }}-bastion"
-bastion_host_username: fedora
+rds_allocated_storage_gb: 20
+rds_instance_class: db.m6g.large
+rds_instance_name: mysampledb123
+rds_engine: postgres
+rds_engine_version: "14.8"
 bastion_host_type: t2.xlarge
-bastion_host_required_packages:
+bastion_host_venv_path: ~/env
+rds_listening_port: 5432
+
+# Variables for the deploy_flask_app role
+deploy_flask_app_sshkey_pair_name: "{{ resource_prefix }}-key"
+deploy_flask_app_bastion_host_name: "{{ resource_prefix }}-bastion"
+deploy_flask_app_bastion_host_username: fedora
+deploy_flask_app_bastion_host_required_packages:
   - python3
   - python-virtualenv
   - sshpass
@@ -28,33 +38,19 @@ bastion_host_required_packages:
   - podman
   - httpd-tools
   - ansible
-bastion_host_venv_path: ~/env
-
-workers_instance_type: t3.micro
-workers_user_name: fedora
-number_of_workers: 2
-
-app_listening_port: 5000
-app_git_repository: https://github.com/abikouo/webapp_pyflask_demo.git
-app_config:
+deploy_flask_app_workers_instance_type: t3.micro
+deploy_flask_app_workers_user_name: fedora
+deploy_flask_app_number_of_workers: 2
+deploy_flask_app_listening_port: 5000
+deploy_flask_app_git_repository: https://github.com/abikouo/webapp_pyflask_demo.git
+deploy_flask_app_config:
   env: development
   admin_user: admin
   admin_password: admin
   app_dir: /app/pyapp
-app_force_init: false
-rds_listening_port: 5432
-local_registry_user: ansible
-local_registry_pwd: testing123
-local_registry_port: "{{ app_listening_port }}"
-
-rds_allocated_storage_gb: 20
-rds_instance_class: db.m6g.large
-rds_instance_name: mysampledb123
-rds_engine: postgres
-rds_engine_version: "14.8"
-rds_master_password: L#5cH2mgy_
-rds_master_username: ansible
-
-image_filter: Fedora-Cloud-Base-35-*
-
-operation: create
+deploy_flask_app_force_init: false
+deploy_flask_app_local_registry_user: ansible
+deploy_flask_app_local_registry_pwd: testing123
+deploy_flask_app_local_registry_port: "{{ deploy_flask_app_listening_port }}"
+deploy_flask_app_rds_master_password: L#5cH2mgy_
+deploy_flask_app_rds_master_username: ansible
