--- a/roles/deploy_flask_app/tasks/deploy_app.yaml
+++ b/roles/deploy_flask_app/tasks/deploy_app.yaml
@@ -5,7 +5,7 @@
       aws_access_key: "{{ aws_access_key | default(omit) }}"
       aws_secret_key: "{{ aws_secret_key | default(omit) }}"
       security_token: "{{ security_token | default(omit) }}"
-      region: "{{ region | default(aws_region) }}"
+      region: "{{ deploy_flask_app_region | default(aws_region) }}"
 
   block:
     - name: Set variables
@@ -27,12 +27,12 @@
 
     - name: Compute number of instances to create/delete
       ansible.builtin.set_fact:
-        deploy_flask_app_expected_instances: "{{ number_of_workers | int - deploy_flask_app_vms.instances | length }}"
+        deploy_flask_app_expected_instances: "{{ deploy_flask_app_number_of_workers | int - deploy_flask_app_vms.instances | length }}"
 
     - name: Create list of targets hosts
       amazon.aws.ec2_instance:
         name: "{{ deploy_flask_app_instance_name }}"
-        instance_type: "{{ workers_instance_type }}"
+        instance_type: "{{ deploy_flask_app_workers_instance_type }}"
         image_id: "{{ deploy_flask_app_setup.add_host.host_vars.host_config.image_id }}"
         key_name: "{{ deploy_flask_app_localhost_key_pair }}"
         subnet_id: "{{ deploy_flask_app_setup.add_host.host_vars.host_config.private_subnet_id }}"
@@ -64,7 +64,6 @@
         deploy_flask_app_instances_list: "{{ deploy_flask_app_instances_list + [item.instance_id + ':' + item.private_ip_address] }}"
       with_items: "{{ deploy_flask_app_vms.instances }}"
 
-
 - name: Set variables
   ansible.builtin.set_fact:
     deploy_flask_app_workers_instances: "{{ deploy_flask_app_vms.instances }}"
@@ -89,7 +88,7 @@
   block:
     - name: Clone git repository for web application
       ansible.builtin.git:
-        repo: "{{ app_git_repository }}"
+        repo: "{{ deploy_flask_app_git_repository }}"
         dest: ~/webapp
 
     - name: Build webapp container image
@@ -129,15 +128,15 @@
           ansible.builtin.shell:
             cmd: >
               htpasswd -bBc /opt/registry/auth/htpasswd
-              {{ local_registry_user }}
-              {{ local_registry_pwd }}
+              {{ deploy_flask_app_local_registry_user }}
+              {{ deploy_flask_app_local_registry_pwd }}
           changed_when: false
 
         - name: Start the registry
           ansible.builtin.shell:
             cmd: >
               podman run --name registry500x
-              -p {{ app_listening_port }}:5000
+              -p {{ deploy_flask_app_listening_port }}:5000
               -v /opt/registry/data:/var/lib/registry:z
               -v /opt/registry/auth:/auth:z
               -e "REGISTRY_AUTH=htpasswd"
@@ -151,26 +150,26 @@
     - name: Push image into private registry
       ansible.builtin.shell:
         cmd: >
-          podman login 127.0.0.1:{{ app_listening_port }} -u '{{ local_registry_user }}' -p '{{ local_registry_pwd }}' --tls-verify=false &&
-          podman tag webapp 127.0.0.1:{{ app_listening_port }}/ansible-webapp &&
-          podman push 127.0.0.1:{{ app_listening_port }}/ansible-webapp --tls-verify=false
+          podman login 127.0.0.1:{{ deploy_flask_app_listening_port }} -u '{{ deploy_flask_app_local_registry_user }}' -p '{{ deploy_flask_app_local_registry_pwd }}' --tls-verify=false &&
+          podman tag webapp 127.0.0.1:{{ deploy_flask_app_listening_port }}/ansible-webapp &&
+          podman push 127.0.0.1:{{ deploy_flask_app_listening_port }}/ansible-webapp --tls-verify=false
       changed_when: false
 
 - name: Initialize database tables
   ansible.builtin.shell:
     cmd: >
       podman run --rm
-      -e FLASK_APP="{{ app_config.app_dir }}"
-      -e FLASK_ENV="{{ app_config.env }}"
+      -e FLASK_APP="{{ deploy_flask_app_config.app_dir }}"
+      -e FLASK_ENV="{{ deploy_flask_app_config.env }}"
       -e DATABASE_HOST="{{ deploy_flask_app_setup.add_host.host_vars.host_config.rds_info.host }}"
       -e DATABASE_INSTANCE="{{ deploy_flask_app_setup.add_host.host_vars.host_config.rds_info.name }}"
       -e DATABASE_USER="{{ deploy_flask_app_setup.add_host.host_vars.host_config.rds_info.master_username }}"
       -e DATABASE_PASSWORD="{{ deploy_flask_app_setup.add_host.host_vars.host_config.rds_info.master_user_password }}"
-      -e ADMIN_USER="{{ app_config.admin_user }}"
-      -e ADMIN_PASSWORD="{{ app_config.admin_password }}"
+      -e ADMIN_USER="{{ deploy_flask_app_config.admin_user }}"
+      -e ADMIN_PASSWORD="{{ deploy_flask_app_config.admin_password }}"
       -e WORKER_HOSTNAME="{{ inventory_hostname }}"
       -e WORKERS_HOSTS="bastion"
-      webapp flask {{ app_force_init | bool | ternary('force-init-db', 'init-db') }}
+      webapp flask {{ deploy_flask_app_force_init | bool | ternary('force-init-db', 'init-db') }}
   run_once: true
   changed_when: false
   delegate_to: bastion
@@ -187,7 +186,7 @@
     cmd: >
       ansible-playbook playbook.yaml -i inventory.ini -vvv
       -e '@vars.yaml'
-      -e registry_host_port='{{ deploy_flask_app_setup.add_host.host_vars.host_config.private_ip }}:{{ app_listening_port }}'
+      -e registry_host_port='{{ deploy_flask_app_setup.add_host.host_vars.host_config.private_ip }}:{{ deploy_flask_app_listening_port }}'
   args:
     chdir: ~/
   changed_when: false
@@ -199,12 +198,12 @@
       aws_access_key: "{{ aws_access_key | default(omit) }}"
       aws_secret_key: "{{ aws_secret_key | default(omit) }}"
       security_token: "{{ security_token | default(omit) }}"
-      region: "{{ region | default(aws_region) }}"
+      region: "{{ deploy_flask_app_region | default(aws_region) }}"
   amazon.aws.elb_classic_lb:
     state: present
     name: "{{ deploy_flask_app_setup.add_host.host_vars.ansible_host_name }}-lb"
     listeners:
-      - load_balancer_port: "{{ app_listening_port }}"
+      - load_balancer_port: "{{ deploy_flask_app_listening_port }}"
         instance_port: 5000
         protocol: HTTP
         instance_protocol: HTTP
@@ -223,4 +222,4 @@
 
 - name: Debug application url
   ansible.builtin.debug:
-    msg: "Application url: {{ deploy_flask_app_lb_result.elb.dns_name }}:{{ app_listening_port }}"
+    msg: "Application url: {{ deploy_flask_app_lb_result.elb.dns_name }}:{{ deploy_flask_app_listening_port }}"
