--- a/roles/deploy_flask_app/tasks/setup.yaml
+++ b/roles/deploy_flask_app/tasks/setup.yaml
@@ -1,32 +1,32 @@
 ---
-- name: Set 'region' variable
+- name: Set 'deploy_flask_app_region' variable
   ansible.builtin.set_fact:
-    deploy_flask_app_region: "{{ region | default(aws_region) }}"
+    deploy_flask_app_region: "{{ deploy_flask_app_region | default(aws_region) }}"
 
 - name: Create resources playbook
   block:
     - name: Set 'sshkey_file' variable
       ansible.builtin.set_fact:
-        deploy_flask_app_sshkey_file: ~/private-key-{{ sshkey_pair_name }}-{{ deploy_flask_app_region | default(aws_region) }}
+        deploy_flask_app_sshkey_file: ~/private-key-{{ deploy_flask_app_sshkey_pair_name }}-{{ deploy_flask_app_region | default(aws_region) }}
 
     - name: Add host to inventory
       ansible.builtin.add_host:
-        hostname: bastion
-        ansible_ssh_user: "{{ bastion_host_username }}"
-        ansible_host: "{{ vm_info.instances.0.public_ip_address }}"
+        hostname: "bastion"
+        ansible_ssh_user: "{{ deploy_flask_app_bastion_host_username }}"
+        ansible_host: "{{ deploy_flask_app_vm_info.instances.0.public_ip_address }}"
         ansible_ssh_common_args: -o "UserKnownHostsFile=/dev/null" -o StrictHostKeyChecking=no -i {{ deploy_flask_app_sshkey_file }}
         ansible_python_interpreter: auto
-        ansible_host_name: "{{ vm_info.instances.0.public_dns_name | split('.') | first }}"
+        ansible_host_name: "{{ deploy_flask_app_vm_info.instances.0.public_dns_name | split('.') | first }}"
         host_config:
-          public_subnet_id: "{{ vm_info.instances.0.subnet_id }}"
-          private_subnet_id: "{{ private_subnet_id }}"
-          image_id: "{{ vm_info.instances.0.image_id }}"
-          group_id: "{{ vm_info.instances.0.security_groups[0].group_id }}"
-          private_ip: "{{ vm_info.instances.0.private_ip_address }}"
-          vpc_id: "{{ vpc_id }}"
+          public_subnet_id: "{{ deploy_flask_app_vm_info.instances.0.subnet_id }}"
+          private_subnet_id: "{{ deploy_flask_app_private_subnet_id }}"
+          image_id: "{{ deploy_flask_app_vm_info.instances.0.image_id }}"
+          group_id: "{{ deploy_flask_app_vm_info.instances.0.security_groups[0].group_id }}"
+          private_ip: "{{ deploy_flask_app_vm_info.instances.0.private_ip_address }}"
+          vpc_id: "{{ deploy_flask_app_vpc_id }}"
           rds_info:
-            host: "{{ rds_info.instances.0.endpoint.address }}"
-            name: "{{ rds_info.instances.0.dbname | default('mysampledb123') }}"
-            master_user_password: "{{ rds_master_password | default('L#5cH2mgy_') }}"
-            master_username: "{{ rds_master_username | default('ansible') }}"
+            host: "{{ deploy_flask_app_rds_info.instances.0.endpoint.address }}"
+            name: "{{ deploy_flask_app_rds_info.instances.0.dbname | default('mysampledb123') }}"
+            master_user_password: "{{ deploy_flask_app_rds_master_password | default('L#5cH2mgy_') }}"
+            master_username: "{{ deploy_flask_app_rds_master_username | default('ansible') }}"
       register: deploy_flask_app_setup
