--- a/tests/integration/targets/test_deploy_flask_app/tasks/main.yaml
+++ b/tests/integration/targets/test_deploy_flask_app/tasks/main.yaml
@@ -20,14 +20,14 @@
       ansible.builtin.include_role:
         name: cloud.aws_ops.deploy_flask_app
       vars:
-        private_subnet_id: "{{ private_subnet.subnet.id }}"
-        vpc_id: "{{ vpc.vpc.id }}"
-        vm_info: "{{ vm_result }}"
-        rds_info: "{{ rds_result }}"
+        deploy_flask_app_private_subnet_id: "{{ private_subnet.subnet.id }}"
+        deploy_flask_app_vpc_id: "{{ vpc.vpc.id }}"
+        deploy_flask_app_vm_info: "{{ vm_result }}"
+        deploy_flask_app_rds_info: "{{ rds_result }}"
 
     - name: Check that a page returns successfully
       ansible.builtin.uri:
-        url: "http://{{ deploy_flask_app_lb_result.elb.dns_name }}:{{ app_listening_port }}"
+        url: "http://{{ deploy_flask_app_lb_result.elb.dns_name }}:{{ deploy_flask_app_listening_port }}"
       register: deploy_flask_app_check
       until: "deploy_flask_app_check.status == 200"
       retries: 5
