--- a/tests/integration/targets/test_deploy_flask_app/vars/main.yaml
+++ b/tests/integration/targets/test_deploy_flask_app/vars/main.yaml
@@ -1,7 +1,6 @@
 ---
 # vars for create and delete
 # ==================================
-resource_prefix: "ansible-demo-test"
 vpc_name: "{{ resource_prefix }}-vpc"
 vpc_cidr: 10.1.0.0/16
 subnet_cidr:
@@ -15,27 +14,22 @@ rds_subnet_group_name: "{{ resource_prefix }}-rds-sg"
 public_secgroup_name: "{{ resource_prefix }}-sg"
 rds_secgroup_name: "{{ resource_prefix }}-rds-sec"
 rds_identifier: "{{ resource_prefix }}-rds-01"
-sshkey_pair_name: "{{ resource_prefix }}-key"
-
 rds_listening_port: 5432
 rds_allocated_storage_gb: 20
 rds_instance_class: db.m6g.large
 rds_instance_name: mysampledb123
 rds_engine: postgres
 rds_engine_version: "14.8"
-
 bastion_host_type: t3.micro
 bastion_host_venv_path: ~/env
-
-workers_user_name: fedora
 image_filter: Fedora-Cloud-Base-35-*
 
 # vars for the deploy_flask_app role and create task
 # =================================================
-region: "us-east-1"
-bastion_host_name: "{{ resource_prefix }}-bastion"
-bastion_host_username: fedora
-bastion_host_required_packages:
+
+deploy_flask_app_bastion_host_name: "{{ resource_prefix }}-bastion"
+deploy_flask_app_bastion_host_username: fedora
+deploy_flask_app_bastion_host_required_packages:
   - python3
   - python-virtualenv
   - sshpass
@@ -43,21 +37,22 @@ bastion_host_required_packages:
   - podman
   - httpd-tools
   - ansible
+deploy_flask_app_sshkey_pair_name: "{{ resource_prefix }}-key"
+deploy_flask_app_workers_user_name: fedora
+deploy_flask_app_workers_instance_type: t3.micro
+deploy_flask_app_number_of_workers: 2
 
-workers_instance_type: t3.micro
-number_of_workers: 2
-
-app_listening_port: 5000
-app_git_repository: https://github.com/abikouo/webapp_pyflask_demo.git
-app_config:
+deploy_flask_app_listening_port: 5000
+deploy_flask_app_git_repository: https://github.com/abikouo/webapp_pyflask_demo.git
+deploy_flask_app_config:
   env: development
   admin_user: admin
   admin_password: admin
   app_dir: /app/pyapp
-app_force_init: false
-local_registry_user: ansible
-local_registry_pwd: testing123
-local_registry_port: "{{ app_listening_port }}"
+deploy_flask_app_force_init: false
+deploy_flask_app_local_registry_user: ansible
+deploy_flask_app_local_registry_pwd: testing123
+deploy_flask_app_local_registry_port: "{{ deploy_flask_app_listening_port }}"
 
-rds_master_password: L#5cH2mgy_
-rds_master_username: ansible
+deploy_flask_app_rds_master_password: L#5cH2mgy_
+deploy_flask_app_rds_master_username: ansible
