--- a/roles/deploy_flask_app/tasks/bastion_setup.yaml
+++ b/roles/deploy_flask_app/tasks/bastion_setup.yaml
@@ -1,6 +1,12 @@
 ---
 - name: Deploy resource from Bastion
   delegate_to: bastion
+  module_defaults:
+    group/aws:
+      aws_access_key: "{{ aws_access_key | default(omit) }}"
+      aws_secret_key: "{{ aws_secret_key | default(omit) }}"
+      security_token: "{{ security_token | default(omit) }}"
+      region: "{{ deploy_flask_app_region | default(aws_region) }}"
   block:
     - name: Update ssh_config
       ansible.builtin.lineinfile:
